gitops/apps/gotify/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gotify
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: gotify
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
